Thchang/2155 fixed the UI alignment in workspace dialog (#2187)
* fixed the alignment in workspace dialog

* added margin to show whole highlight box of input field

--- a/src/components/Dialogs/WorkspaceDialog/WorkspaceInfoComponent.scss
+++ b/src/components/Dialogs/WorkspaceDialog/WorkspaceInfoComponent.scss
@@ -36,6 +36,12 @@
         .entry-title {
             font-weight: bold;
             padding-right: 10px;
+            padding-bottom: 5px;
+        }
+
+        .entry-value {
+            overflow-wrap: anywhere;
+            padding-bottom: 5px;
         }
     }
 }
